# robotPathPlanning

./: README.md  mouse3d.py  mouse3d_multiproc.py  mouse_test.py  moved_mouse.py  requirements.txt  robotInterface.py  trash.py
MATLAB/: robotics_toolbox_GJK_example.m
MATLAB/GJK2D/: getSupport.m  gjkTest.m
MATLAB/Robotics Toolbox Helper Functions/: generateArmPolygons.m
MATLAB/mexTests/: maxRowMatVec.mexw64
MATLAB/simulation/: inverse_kinematics_fmincon.m  poly_semicircle.m  toolbox_ikine_test.m
MATLAB/stl_models/: MRI scanner - Center Part-1-1.STL  MRI scanner - Center Part-1.STL  MRI scanner - Moving Bed-1-1.STL
Python/: temp.py
Python/Daniel/: demo.ipynb  joint_viz.ipynb  multibodies.ipynb
Python/V-REP_PRO_EDU_V3_5_0_Linux/: .youbot_csv_njlw_default_csv  b0_graph_console  b0_graph_console_gui  b0_log_console_gui  b0_resolver  bubbleRobClient  externalIkDemo1  externalIkDemo3  libQt53DCore.so.5.9  vrep  (+12 more)
VREP_robot/: moveMarker.py  vrepRobot.py  vrep_mouse.ipynb  vrep_mouse_test.py
kinematics/: forwardKinematics.py  forwardKinematics_test.ipynb
kinematics_controls/: armControl.py  current_testing.py  forwardKinematics.py  motion_test.py  moveMarker.py  optitrakTest.py
mriArm_config/: j3.T
old_10.8.2018/: README.md  forwardKinematics_test.py
old_10.8.2018/old/Python/drive_models/urdf_backup/with_guy/: CMakeLists.txt  package.xml
old_10.8.2018/old/Python/drive_models/urdf_backup/with_guy/meshes/: base_link.STL
old_10.8.2018/old/Python/drive_models/urdf_backup/with_guy/urdf/: with_guy.urdf
utils/: GetJointData.py  motor_setup.py  mouse3d.py
(+659 files in other folders)
